remake the login page and add the admin manage function

--- a/项目总结/项目总结.md
+++ b/项目总结/项目总结.md
@@ -13,7 +13,7 @@
 
 ### 1.3 执行亮点
 - 独立开发完成，提高了对django框架的熟悉程度
-- 加深对TVM及SVM等相关编程模型的了解
+- 加深对TVM及MVC等相关编程模型的了解
 - 使用github进行版本管理和进度同步，练习了git的使用
 
 ### 1.4 成功图像
@@ -35,3 +35,12 @@
 ## 2.项目详情
 
 ## 项目情况
+
+本项目选用django架构作为基础开发，django架构Django继承并简化了MVC架构。MVC中的Controller部分基本全由Django完成。View部分被分割成两部分，即：负责HTML渲染的模板和负责显示逻辑的视图。所以Django又被称为MVT(Model-View-Template)框架。这个Django除了MVT框架的核心部分(O/R映射工具、URL分配器(Dispatcher)、视图、模板系统)之外。还有管理界面、缓存系统、国际化支持、表单处理等机制和功能。
+
+　　使用Django开发Web应用站点时，需准备一个承载着Django实例及数据库设置等内容的工程，然后通过在该工程中新建几个应用或者调用外部应用，或者将二者结合起来进行开发。由于每个应用的本质都是Python程序包，所以只要按功能(模型，视图，模板等)对这些包进行分析，完全可以拿到其他工程中重复利用。
+
+- django软件架构
+  ![djano软件架构](./django软件架构.png)
+
+本次项目主要开发的是架构中的models,view以及template模块，其中
